test/resources/typer/failing/OperatorError2.scala
object OperatorError {
    val str: String = "123";
    str + "abc"
}
